--- a/client/package.json
+++ b/client/package.json
@@ -48,7 +48,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://server:4000",
+  "proxy": "http://localhost:4000",
   "browserslist": {
     "production": [
       ">0.2%",
