--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "namor": "^2.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-autosuggest": "^10.0.2",
     "react-bootstrap": "1.0.0-beta.10",
     "react-data-table-component": "^6.2.1",
     "react-dates": "^21.8.0",
