--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.9.0",
+    "downloadjs": "^1.4.7",
     "file-saver": "^2.0.2",
     "google-map-react": "^1.1.4",
     "install": "^0.13.0",
