--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "nodemon --ignore sessions/ src/server.js"
+    "start": "nodemon --ignore sessions/ src/server.js --ignore client"
   },
   "author": "",
   "license": "ISC",
@@ -15,10 +15,12 @@
     "concurrently": "^4.0.1",
     "crypto": "^1.0.1",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.7-alpha.3",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.24.0",
     "mongoose": "^5.3.11",
+    "multer": "^1.4.2",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.2",
     "passport": "^0.4.0",
