--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-select": "^3.1.0",
-    "react-table": "6.5.3",
+    "react-table": "^6.5.3",
+    "react-toastify": "^6.0.5",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.0.0",
