--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "concurrently": "^4.0.1",
     "crypto": "^1.0.1",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.7-alpha.3",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.24.0",
