--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - NODE_ENV=${NODE_ENV}
     ports:
       - ${PORT}:${PORT}
+    volumes:
+      - ./client-files:/clients
     command: node src/server.js
     links:
       - db
