--- a/dev-docker-compose.yml
+++ b/dev-docker-compose.yml
@@ -27,6 +27,7 @@ services:
     volumes:
       - ./server/src:/app/server/src
       - ./client-files:/clients
+      - ./insurance-files:/insurances
     # Run command
     # Nodemon for hot reloading (-L flag required for polling in Docker)
     command: nodemon -L src/server.js
