fixed delete files

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ email.js
 insurance-files/
 client-files/
 mongofile
-./dev-docker-compose.yml
-./docker-compose.yml
+dev-docker-compose.yml
+docker-compose.yml
